add uptime and pellet

--- a/core/template/dashboard/rikaha.html
+++ b/core/template/dashboard/rikaha.html
@@ -72,6 +72,18 @@
       <span style="font-size: 0.8em;">(#frostProtectionTemperature_name#)</span>
   </div>
 
+  <div class="tooltips#parameterFeedRateTotal_histo#" data-cmd_id="#parameterFeedRateTotal_id#" style="margin-left:5px;#parameterFeedRateTotal_display#">
+      <span title="#parameterFeedRateTotal_name#" class="fa divers-weight11" style="min-width:15px"></span>
+      <span>#parameterFeedRateTotal# #parameterFeedRateTotal_unite#</span>
+      <span style="font-size: 0.8em;">(#parameterFeedRateTotal_name#)</span>
+  </div>
+
+  <div class="tooltips" data-cmd_id="#local_uptime_id#" style="margin-left:5px;#local_uptime_display#">
+      <span title="#local_uptime_name#" class="fa fa-clock-o" style="min-width:15px"></span>
+      <span>#local_uptime#</span>
+      <span style="font-size: 0.8em;">(#local_uptime_name#)</span>
+  </div>
+
   <div class="tooltips" data-cmd_id="#parameterVersionMainBoard_id#" style="margin-left:5px;#parameterVersionMainBoard_display#">
       <span title="#parameterVersionMainBoard_name#" class="fa fa-hdd-o" style="min-width:15px"></span>
       <span>#parameterVersionMainBoard#</span>
