--- a/core/template/dashboard/rikaha.html
+++ b/core/template/dashboard/rikaha.html
@@ -50,6 +50,11 @@
       $('##onOff_id#_check').append('<i class="fa fa-check"></i>');
     }
   </script>
+  <div class="btn-group pull-right" role="group">
+    <div type="button" class="btn fa fa-plus pull-right cursor consigne-plus"></div>
+    <div type="button" class="btn fa fa-minus pull-right cursor consigne-moins"></div>
+    <div type="button" class="btn pull-right" style="padding-top:4p;cursor: default#targetTemperature##targetTemperature_unite#</div>
+  </div>
   <div class="tooltips#targetTemperature_histo#" data-cmd_id="#targetTemperature_id#" style="margin-left:5px;#targetTemperature_display#">
       <span title="#targetTemperature_name#" class="fa jeedom-thermo-moyen" style="min-width:15px"></span>
       <span>#targetTemperature##targetTemperature_unite#</span>
