--- a/core/template/dashboard/rikaha.html
+++ b/core/template/dashboard/rikaha.html
@@ -28,38 +28,57 @@
   </div>
   <div class="tooltips" data-cmd_id="#frostProtectionActive_id#" style="margin-left:5px;#frostProtectionActive_display#">
       <span title="#frostProtectionActive_name#" class="fa nature-snowflake" style="min-width:15px"></span>
-      <span id="#frostProtectionActive_id#_check"></span>
+      <span id="rikaha_#frostProtectionActive_id#_check"></span>
       <span style="font-size: 0.8em;">(#frostProtectionActive_name#)</span>
   </div>
   <script>
     if('#frostProtectionActive#' == '0' ){
-      $('##frostProtectionActive_id#_check').append('<i class="fa fa-times"></i>');
+      $('#rikaha_#frostProtectionActive_id#_check').append('<i class="fa fa-times"></i>');
     }else{
-      $('##frostProtectionActive_id#_check').append('<i class="fa fa-check"></i>');
+      $('#rikaha_#frostProtectionActive_id#_check').append('<i class="fa fa-check"></i>');
     }
   </script>
   <div class="tooltips" data-cmd_id="#onOff_id#" style="margin-left:5px;#onOff_display#">
       <span title="#onOff_name#" class="fa techno-cable1" style="min-width:15px"></span>
-      <span id="#onOff_id#_check"></span>
+      <span id="rikaha_#onOff_id#_check"></span>
       <span style="font-size: 0.8em;">(#onOff_name#)</span>
   </div>
   <script>
     if('#onOff#' == '0' ){
-      $('##onOff_id#_check').append('<i class="fa fa-times"></i>');
+      $('#rikaha_#onOff_id#_check').append('<i class="fa fa-times"></i>');
     }else{
-      $('##onOff_id#_check').append('<i class="fa fa-check"></i>');
+      $('#rikaha_#onOff_id#_check').append('<i class="fa fa-check"></i>');
     }
   </script>
-  <div class="btn-group pull-right" role="group">
-    <div type="button" class="btn fa fa-plus pull-right cursor consigne-plus"></div>
-    <div type="button" class="btn fa fa-minus pull-right cursor consigne-moins"></div>
-    <div type="button" class="btn pull-right" style="padding-top:4p;cursor: default#targetTemperature##targetTemperature_unite#</div>
+
+  <div class="tooltips" data-cmd_id="#targetTemperature_id#" style="margin-left:5px;#targetTemperature_display#">
+    <span title="#targetTemperature_name#" class="fa jeedom-thermo-moyen" style="min-width:15px"></span>
+    <select id="rikaha_#targetTemperature_id#_select" class="selectCmd" style="color::#foreground-color#;background-color:#background-color#;">
+      <option value="...">...</option>
+    </select>
+    <span style="font-size: 0.8em;" >(#targetTemperature_name#)</span>
   </div>
+  <script>
+    for(var i=10;i<28;i++){
+      var selected='';
+      if(i==#targetTemperature#){
+        selected='selected="selected "';
+      }
+      $('#rikaha_#targetTemperature_id#_select').append('<option '+selected+'value="'+i+'">'+i+'#targetTemperature_unite#</option>');
+    }
+    $('.rikaha_#targetTemperature_id#_select').on('change', function () {
+
+      jeedom.cmd.execute({id: #targetTemperature_id#, value: $(this).value()});
+      //jeedom.cmd.execute({id: '#local_refresh_id#'});
+    });
+  </script>
+  <!--
   <div class="tooltips#targetTemperature_histo#" data-cmd_id="#targetTemperature_id#" style="margin-left:5px;#targetTemperature_display#">
       <span title="#targetTemperature_name#" class="fa jeedom-thermo-moyen" style="min-width:15px"></span>
       <span>#targetTemperature##targetTemperature_unite#</span>
       <span style="font-size: 0.8em;" >(#targetTemperature_name#)</span>
   </div>
+  -->
   <div class="tooltips#inputRoomTemperature_histo#" data-cmd_id="#inputRoomTemperature_id#" style="margin-left:5px;#inputRoomTemperature_display#">
       <span title="#inputRoomTemperature_name#" class="fa jeedom-thermo-chaud" style="min-width:15px"></span>
       <span>#inputRoomTemperature##inputRoomTemperature_unite#</span>
