--- a/core/template/dashboard/rikaha.html
+++ b/core/template/dashboard/rikaha.html
@@ -80,9 +80,19 @@
       <span>#frostProtectionTemperature##frostProtectionTemperature_unite#</span>
       <span style="font-size: 0.8em;">(#frostProtectionTemperature_name#)</span>
   </div>
+  <div class="parameterRuntimePellets_histo#" data-cmd_id="#parameterRuntimePellets_id#" style="margin-left:5px;#parameterRuntimePellets_display#">
+      <span title="#parameterRuntimePellets_name#" class="fa fa-clock-o" style="min-width:15px"></span>
+      <span>#parameterRuntimePellets##parameterRuntimePellets_unite#</span>
+      <span style="font-size: 0.8em;">(#parameterRuntimePellets_name#)</span>
+  </div>
+  <div class="parameterRuntimeLogs_histo#" data-cmd_id="#parameterRuntimeLogs_id#" style="margin-left:5px;#parameterRuntimeLogs_display#">
+      <span title="parameterRuntimeLogs_name#" class="fa fa-clock-o" style="min-width:15px"></span>
+      <span>#parameterRuntimeLogs##parameterRuntimeLogs_unite#</span>
+      <span style="font-size: 0.8em;">(#parameterRuntimeLogs_name#)</span>
+  </div>
   <div class="tooltips#parameterFeedRateTotal_histo#" data-cmd_id="#parameterFeedRateTotal_id#" style="margin-left:5px;#parameterFeedRateTotal_display#">
       <span title="#parameterFeedRateTotal_name#" class="fa divers-weight11" style="min-width:15px"></span>
-      <span>#parameterFeedRateTotal# #parameterFeedRateTotal_unite#</span>
+      <span>#parameterFeedRateTotal##parameterFeedRateTotal_unite#</span>
       <span style="font-size: 0.8em;">(#parameterFeedRateTotal_name#)</span>
   </div>
   <div class="tooltips" data-cmd_id="#local_uptime_id#" style="margin-left:5px;#local_uptime_display#">
