--- a/core/template/dashboard/rikaha.html
+++ b/core/template/dashboard/rikaha.html
@@ -47,18 +47,35 @@
       $('.eqLogic[data-eqLogic_id=#id#] .#frostProtectionActive_id#_check').append('<i class="fa fa-check"></i>');
     }
   </script>
+
+  <div class="tooltips" data-cmd_id="#local_setonOff_id#" style="margin-left:5px;#onOff_display#">
+      <span title="#onOff_name#" class="fa fa-bolt" style="min-width:15px"></span>
+      <select class="#local_setonOff_id#_selectCmd" style="background-color:#background-color#;">
+        #onOff_options#
+      </select>
+  </div>
+  <script>
+    $('.eqLogic[data-eqLogic_id=#id#] .#local_setonOff_id#_selectCmd').on('change', function () {
+      $('.eqLogic[data-eqLogic_id=#id#] .statusCmd').append('<i data-rikaha="processing" class="fa fa-rss" style="margin-top: 3px;margin-right: 3px;"></i>');
+      jeedom.cmd.execute({id: '#local_setonOff_id#', value: $(this).val()});
+      setTimeout(function(){$("[data-rikaha=processing]").remove();}, 2000);
+    });
+  </script>
+
+  <!--
   <div class="tooltips" data-cmd_id="#onOff_id#" style="margin-left:5px;#onOff_display#">
-      <span title="#onOff_name#" class="fa techno-cable1" style="min-width:15px"></span>
+      <span title="#onOff_name#" class="fa techno-fa-bolt" style="min-width:15px"></span>
       <span class="#onOff_id#_check"></span>
       <span style="font-size: 0.8em;">(#onOff_name#)</span>
   </div>
   <script>
     if('#onOff#' == '0' ){
-      $('.eqLogic[data-eqLogic_id=#id#] .#onOff_id#_check').append('<i class="fa fa-times"></i>');
+      $('.eqLogic[data-eqLogic_id=#id#] .#onOff_id#_check').append('<i class="fa fa-ban"> Off</i>');
     }else{
-      $('.eqLogic[data-eqLogic_id=#id#] .#onOff_id#_check').append('<i class="fa fa-check"></i>');
+      $('.eqLogic[data-eqLogic_id=#id#] .#onOff_id#_check').append('<i class="fa fa-check-circle-o"> On</i>');
     }
   </script>
+-->
 <div class="tooltips" data-cmd_id="#local_settargetTemperature_id#" style="margin-left:5px;#targetTemperature_display#">
   <span title="#targetTemperature_name#" class="fa jeedom-thermo-moyen" style="min-width:15px"></span>
   <select class="#local_settargetTemperature_id#_selectCmd" style="background-color:#background-color#;">
