--- a/core/template/dashboard/rikaha.html
+++ b/core/template/dashboard/rikaha.html
@@ -99,10 +99,15 @@
       <span>#parameterFeedRateTotal##parameterFeedRateTotal_unite#</span>
       <span style="font-size: 0.8em;">(#parameterFeedRateTotal_name#)</span>
   </div>
-  <div class="tooltips" data-cmd_id="#local_uptime_id#" style="padding-top:4px;margin-left:5px;#local_uptime_display#">
-      <span title="#local_uptime_name#" class="fa fa-clock-o" style="min-width:15px"></span>
-      <span>#local_uptime#</span>
-      <span style="font-size: 0.8em;">(#local_uptime_name#)</span>
+  <div class="tooltips#parameterFeedRateService_histo#" data-cmd_id="#parameterFeedRateService_id#" style="padding-top:4px;margin-left:5px;#parameterFeedRateService_display#">
+      <span title="#parameterFeedRateService_name#" class="fa fa-wrench" style="min-width:15px"></span>
+      <span>#parameterFeedRateService##parameterFeedRateService_unite#</span>
+      <span style="font-size: 0.8em;">(#parameterFeedRateService_name#)</span>
+  </div>
+  <div class="tooltips" data-cmd_id="#local_downtime_id#" style="padding-top:4px;margin-left:5px;color: #FF0000;#local_downtime_display#">
+      <span title="#local_downtime_name#" class="fa fa-clock-o" style="min-width:15px"></span>
+      <span>#local_downtime#</span>
+      <span style="font-size: 0.8em;">(#local_downtime_name#)</span>
   </div>
   <div class="tooltips" data-cmd_id="#parameterVersionMainBoard_id#" style="padding-top:4px;margin-left:5px;#parameterVersionMainBoard_display#">
       <span title="#parameterVersionMainBoard_name#" class="fa fa-hdd-o" style="min-width:15px"></span>
