--- a/core/template/dashboard/rikaha.html
+++ b/core/template/dashboard/rikaha.html
@@ -104,7 +104,7 @@
       <span>#parameterFeedRateService##parameterFeedRateService_unite#</span>
       <span style="font-size: 0.8em;">(#parameterFeedRateService_name#)</span>
   </div>
-  <div class="tooltips" data-cmd_id="#local_downtime_id#" style="padding-top:4px;margin-left:5px;color: #FF0000;#local_downtime_display#">
+  <div class="tooltips" data-cmd_id="#local_downtime_id#" style="padding-top:4px;margin-left:5px;color: #ff7f7f;#local_downtime_display#">
       <span title="#local_downtime_name#" class="fa fa-clock-o" style="min-width:15px"></span>
       <span>#local_downtime#</span>
       <span style="font-size: 0.8em;">(#local_downtime_name#)</span>
